# GEMM-optimization

./: .gitignore  01_cache_theory.md  02_simd_theory.md  03_cuda_theory.md  CMakeLists.txt  Makefile  README.md  benchmark.cpp  gemm_cuda_bench.cu  gemm_cuda_naive.cu  gemm_cuda_shared.cu  gemm_naive.cpp  gemm_project_prompt.md  gemm_simd.cpp
analysis/: plot_results.py  roofline_plot.py
cuda/: benchmark_cuda.cu  cublas_reference.cu  gemm_v10_vectorized.cu  gemm_v7_naive.cu  gemm_v8_shared.cu  gemm_v9_register.cu
include/: benchmark_utils.h  gemm.h  roofline.h
notes/: 01_cache_and_tiling.md  02_simd_avx2.md  03_cuda_memory_hierarchy.md  04_roofline_model.md  05_register_tiling.md  06_interview_qa.md
scripts/: profile_cpu.sh  profile_cuda.sh  run_all.sh
src/: benchmark_cpu.cpp  gemm_v1_naive.cpp  gemm_v2_ikj.cpp  gemm_v3_tiling.cpp  gemm_v4_avx2.cpp  gemm_v5_avx2_tiling.cpp  gemm_v6_openmp.cpp
